# TabSaver

./: .gitignore  CMakeLists.txt  README-INSTALL.txt  README-LINUX.txt  README-MACOS.txt  README-WINDOWS.txt  README.md  install-macos.sh
.github/scripts/: sign-and-notarize.sh
.github/workflows/: build.yml
Source/: KeyboardShortcutsPanel.cpp  KeyboardShortcutsPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp  TabEditorComponent.cpp  TabEditorComponent.h  TabEngine.cpp  TabEngine.h
